kubernetes/demos/wasm/wasm-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wasm-demo
  namespace: wasm-demo
  labels:
    app: wasm-demo
spec:
  runtimeClassName: wasmedge
  containers:
  - name: wasm-demo
    image: docker.io/cr7258/wasm-demo-app:v1
