kubernetes/demos/wasm/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wasm-demo
  namespace: wasm-demo
spec:
  selector:
    app: wasm-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
